syntax = "proto3";
package helium;

enum blockchain_token_type_v1 {
  hnt = 0;
  hst = 1;
  hgt = 2;
  hlt = 3;
}
