syntax = "proto3";
package helium;

import "blockchain_token_type_v1.proto";

message blockchain_txn_token_redeem_v1 {
  blockchain_token_type_v1 token_type = 1;
  bytes account = 2;
  uint64 amount = 3;

  bytes signature = 4;
  uint64 nonce = 5;

  uint64 fee = 6;
}
